// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App generic tests When app is is unmounted 1`] = `
<div
  className="app-view__AppViewBlock-eavtQy cxLttm"
>
  <div
    className="sidebar-toggler__SidebarStyledToggler-cuxdwI sidebar-toggler__SidebarOpenIcon-dlLVyw gzKuvQ"
    onClick={[Function]}
  >
    <svg
      id="open"
      viewBox="0 0 20 15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 1a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM0 7.03a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM1 12.06a1 1 0 100 2h18a1 1 0 000-2H1z"
      />
    </svg>
  </div>
  <div
    className="sidebar-toggler__SidebarStyledToggler-cuxdwI sidebar-toggler__SidebarCloseIcon-dgXHTq iDhcPO"
    onClick={[Function]}
  >
    <svg
      id="close"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.23 4.81A1 1 0 004.8 6.23L10.6 12 4.8 17.77a1 1 0 101.42 1.42L12 13.4l5.78 5.78a1 1 0 001.4-1.42L13.42 12l5.78-5.77a1 1 0 10-1.41-1.42L12 10.6 6.23 4.8z"
      />
    </svg>
  </div>
  <aside
    className="sidebar__SidebarBlock-jGzEfz iVMlmQ app-view__AppSidebar-kTTMtc dzNmim"
  >
    <div
      className="sidebar__SidebarHeader-fvoXjN bqSKjH"
    >
      <div
        className="sidebar__SidebarLogo-glTcAx bFebLU"
      >
        <svg
          viewBox="0 0 44 44"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#7000E3"
            height="44"
            rx="3.9"
            width="44"
          />
          <path
            d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
            fill="#FF671B"
          />
        </svg>
      </div>
      <div
        className="sidebar__SidebarSearchField-fxnZm hEtTKV"
      >
        <div
          className="search-field__SearchFieldBlock-bGJybC gqBHCj"
        >
          <input
            autoComplete="off"
            className="search-field__SearchFieldInput-gNWiJt gEyuZP"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Search component name"
            type="text"
            value=""
          />
          <div
            className="search-field__SearchFieldIcon-AMrXU dbjKYb"
          >
            <div
              className="icon__IconBlock-bCeCJH cBUMOE"
              role="presentation"
              size={0}
            >
              <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sidebar__SidebarNavigation-bLaEkw faODsJ"
    >
      <nav
        className="navigation__NavigationBlock-cfhNmD hLoRTR"
      >
        <div
          className="navigation__NavigationSectionBlock-fZcnMm eZvwoH"
        >
          <div
            className="navigation-section__NavigationSectionBlock-dZjlwi iLnYzu"
          >
            <div
              className="navigation-section__NavigationSectionName-kowQGE gota-dv"
              onClick={[Function]}
            >
              Structure
            </div>
            <div
              className="navigation-section__NavigationSectionComponents-iJChPb hEMjsg"
            >
              <div
                className="navigation-section__NavigationSectionComponentsItem-dXwuvS TomLe"
              >
                <a
                  className="navigation-section__NavigationSectionComponentsItemLink-ljuXWa cVdsmA"
                  data-vrt-locator="link"
                  href="#Structure-Component"
                >
                  Component
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          className="navigation__NavigationSectionBlock-fZcnMm eZvwoH"
        >
          <div
            className="navigation-section__NavigationSectionBlock-dZjlwi iLnYzu"
          >
            <div
              className="navigation-section__NavigationSectionName-kowQGE gota-dv"
              onClick={[Function]}
            >
              Components
            </div>
            <div
              className="navigation-section__NavigationSectionComponents-iJChPb hEMjsg"
            >
              <div
                className="navigation-section__NavigationSectionComponentsItem-dXwuvS TomLe"
              >
                <a
                  className="navigation-section__NavigationSectionComponentsItemLink-ljuXWa cVdsmA"
                  data-vrt-locator="link"
                  href="#Components-ErrorBoundary"
                >
                  ErrorBoundary
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </aside>
  <main
    className="app-view__Content-iceBke fTQZHB"
  >
    <article
      className="component__ComponentBlock-dOVVH bIwjKS"
      data-id="welcome!"
    >
      <header
        className="styleguide-component__header"
      >
        <h1
          className="component__ComponentTitle-bHenBi jcJBel"
        >
          Welcome!
        </h1>
        <div
          className="component__ComponentDescription-eZfHWI dkrxtA"
        >
          Style guide is a tool to illustrate, sandbox and test your components.
        </div>
      </header>
    </article>
  </main>
</div>
`;

exports[`App generic tests When app is open 1`] = `
<div
  className="app-view__AppViewBlock-eavtQy cxLttm"
>
  <div
    className="sidebar-toggler__SidebarStyledToggler-cuxdwI sidebar-toggler__SidebarOpenIcon-dlLVyw gzKuvQ"
    onClick={[Function]}
  >
    <svg
      id="open"
      viewBox="0 0 20 15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 1a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM0 7.03a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM1 12.06a1 1 0 100 2h18a1 1 0 000-2H1z"
      />
    </svg>
  </div>
  <div
    className="sidebar-toggler__SidebarStyledToggler-cuxdwI sidebar-toggler__SidebarCloseIcon-dgXHTq iDhcPO"
    onClick={[Function]}
  >
    <svg
      id="close"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.23 4.81A1 1 0 004.8 6.23L10.6 12 4.8 17.77a1 1 0 101.42 1.42L12 13.4l5.78 5.78a1 1 0 001.4-1.42L13.42 12l5.78-5.77a1 1 0 10-1.41-1.42L12 10.6 6.23 4.8z"
      />
    </svg>
  </div>
  <aside
    className="sidebar__SidebarBlock-jGzEfz iVMlmQ app-view__AppSidebar-kTTMtc dzNmim"
  >
    <div
      className="sidebar__SidebarHeader-fvoXjN bqSKjH"
    >
      <div
        className="sidebar__SidebarLogo-glTcAx bFebLU"
      >
        <svg
          viewBox="0 0 44 44"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#7000E3"
            height="44"
            rx="3.9"
            width="44"
          />
          <path
            d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
            fill="#FF671B"
          />
        </svg>
      </div>
      <div
        className="sidebar__SidebarSearchField-fxnZm hEtTKV"
      >
        <div
          className="search-field__SearchFieldBlock-bGJybC gqBHCj"
        >
          <input
            autoComplete="off"
            className="search-field__SearchFieldInput-gNWiJt gEyuZP"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Search component name"
            type="text"
            value=""
          />
          <div
            className="search-field__SearchFieldIcon-AMrXU dbjKYb"
          >
            <div
              className="icon__IconBlock-bCeCJH cBUMOE"
              role="presentation"
              size={0}
            >
              <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sidebar__SidebarNavigation-bLaEkw faODsJ"
    >
      <nav
        className="navigation__NavigationBlock-cfhNmD hLoRTR"
      >
        <div
          className="navigation__NavigationSectionBlock-fZcnMm eZvwoH"
        >
          <div
            className="navigation-section__NavigationSectionBlock-dZjlwi iLnYzu"
          >
            <div
              className="navigation-section__NavigationSectionName-kowQGE gota-dv"
              onClick={[Function]}
            >
              Structure
            </div>
            <div
              className="navigation-section__NavigationSectionComponents-iJChPb hEMjsg"
            >
              <div
                className="navigation-section__NavigationSectionComponentsItem-dXwuvS TomLe"
              >
                <a
                  className="navigation-section__NavigationSectionComponentsItemLink-ljuXWa cVdsmA"
                  data-vrt-locator="link"
                  href="#Structure-Component"
                >
                  Component
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          className="navigation__NavigationSectionBlock-fZcnMm eZvwoH"
        >
          <div
            className="navigation-section__NavigationSectionBlock-dZjlwi iLnYzu"
          >
            <div
              className="navigation-section__NavigationSectionName-kowQGE gota-dv"
              onClick={[Function]}
            >
              Components
            </div>
            <div
              className="navigation-section__NavigationSectionComponents-iJChPb hEMjsg"
            >
              <div
                className="navigation-section__NavigationSectionComponentsItem-dXwuvS TomLe"
              >
                <a
                  className="navigation-section__NavigationSectionComponentsItemLink-ljuXWa cVdsmA"
                  data-vrt-locator="link"
                  href="#Components-ErrorBoundary"
                >
                  ErrorBoundary
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </aside>
  <main
    className="app-view__Content-iceBke fTQZHB"
  >
    <article
      className="component__ComponentBlock-dOVVH bIwjKS"
      data-id="welcome!"
    >
      <header
        className="styleguide-component__header"
      >
        <h1
          className="component__ComponentTitle-bHenBi jcJBel"
        >
          Welcome!
        </h1>
        <div
          className="component__ComponentDescription-eZfHWI dkrxtA"
        >
          Style guide is a tool to illustrate, sandbox and test your components.
        </div>
      </header>
    </article>
  </main>
</div>
`;

exports[`App generic tests When app receive no sections 1`] = `
<div
  className="app-view__AppViewBlock-eavtQy cxLttm"
>
  <div
    className="sidebar-toggler__SidebarStyledToggler-cuxdwI sidebar-toggler__SidebarOpenIcon-dlLVyw gzKuvQ"
    onClick={[Function]}
  >
    <svg
      id="open"
      viewBox="0 0 20 15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 1a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM0 7.03a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM1 12.06a1 1 0 100 2h18a1 1 0 000-2H1z"
      />
    </svg>
  </div>
  <div
    className="sidebar-toggler__SidebarStyledToggler-cuxdwI sidebar-toggler__SidebarCloseIcon-dgXHTq iDhcPO"
    onClick={[Function]}
  >
    <svg
      id="close"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.23 4.81A1 1 0 004.8 6.23L10.6 12 4.8 17.77a1 1 0 101.42 1.42L12 13.4l5.78 5.78a1 1 0 001.4-1.42L13.42 12l5.78-5.77a1 1 0 10-1.41-1.42L12 10.6 6.23 4.8z"
      />
    </svg>
  </div>
  <aside
    className="sidebar__SidebarBlock-jGzEfz iVMlmQ app-view__AppSidebar-kTTMtc dzNmim"
  >
    <div
      className="sidebar__SidebarHeader-fvoXjN bqSKjH"
    >
      <div
        className="sidebar__SidebarLogo-glTcAx bFebLU"
      >
        <svg
          viewBox="0 0 44 44"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#7000E3"
            height="44"
            rx="3.9"
            width="44"
          />
          <path
            d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
            fill="#FF671B"
          />
        </svg>
      </div>
      <div
        className="sidebar__SidebarSearchField-fxnZm hEtTKV"
      >
        <div
          className="search-field__SearchFieldBlock-bGJybC gqBHCj"
        >
          <input
            autoComplete="off"
            className="search-field__SearchFieldInput-gNWiJt gEyuZP"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Search component name"
            type="text"
            value="s"
          />
          <div
            className="search-field__SearchFieldIcon-AMrXU dbjKYb"
          >
            <div
              className="icon__IconBlock-bCeCJH cBUMOE"
              role="presentation"
              size={0}
            >
              <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sidebar__SidebarNavigation-bLaEkw faODsJ"
    >
      <nav
        className="navigation__NavigationBlock-cfhNmD hLoRTR"
      />
    </div>
  </aside>
  <main
    className="app-view__Content-iceBke fTQZHB"
  >
    <article
      className="component__ComponentBlock-dOVVH bIwjKS"
      data-id="welcome!"
    >
      <header
        className="styleguide-component__header"
      >
        <h1
          className="component__ComponentTitle-bHenBi jcJBel"
        >
          Welcome!
        </h1>
        <div
          className="component__ComponentDescription-eZfHWI dkrxtA"
        >
          Style guide is a tool to illustrate, sandbox and test your components.
        </div>
      </header>
    </article>
  </main>
</div>
`;

exports[`App search tests When we clear search request 1`] = `
<div
  className="app-view__AppViewBlock-eavtQy cxLttm"
>
  <div
    className="sidebar-toggler__SidebarStyledToggler-cuxdwI sidebar-toggler__SidebarOpenIcon-dlLVyw gzKuvQ"
    onClick={[Function]}
  >
    <svg
      id="open"
      viewBox="0 0 20 15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 1a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM0 7.03a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM1 12.06a1 1 0 100 2h18a1 1 0 000-2H1z"
      />
    </svg>
  </div>
  <div
    className="sidebar-toggler__SidebarStyledToggler-cuxdwI sidebar-toggler__SidebarCloseIcon-dgXHTq iDhcPO"
    onClick={[Function]}
  >
    <svg
      id="close"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.23 4.81A1 1 0 004.8 6.23L10.6 12 4.8 17.77a1 1 0 101.42 1.42L12 13.4l5.78 5.78a1 1 0 001.4-1.42L13.42 12l5.78-5.77a1 1 0 10-1.41-1.42L12 10.6 6.23 4.8z"
      />
    </svg>
  </div>
  <aside
    className="sidebar__SidebarBlock-jGzEfz iVMlmQ app-view__AppSidebar-kTTMtc dzNmim"
  >
    <div
      className="sidebar__SidebarHeader-fvoXjN bqSKjH"
    >
      <div
        className="sidebar__SidebarLogo-glTcAx bFebLU"
      >
        <svg
          viewBox="0 0 44 44"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#7000E3"
            height="44"
            rx="3.9"
            width="44"
          />
          <path
            d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
            fill="#FF671B"
          />
        </svg>
      </div>
      <div
        className="sidebar__SidebarSearchField-fxnZm hEtTKV"
      >
        <div
          className="search-field__SearchFieldBlock-bGJybC gqBHCj"
        >
          <input
            autoComplete="off"
            className="search-field__SearchFieldInput-gNWiJt gEyuZP"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Search component name"
            type="text"
            value="comp"
          />
          <div
            className="search-field__SearchFieldIcon-AMrXU dbjKYb"
          >
            <div
              className="icon__IconBlock-bCeCJH cBUMOE"
              role="presentation"
              size={0}
            >
              <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sidebar__SidebarNavigation-bLaEkw faODsJ"
    >
      <nav
        className="navigation__NavigationBlock-cfhNmD hLoRTR"
      >
        <div
          className="navigation__NavigationSectionBlock-fZcnMm eZvwoH"
        >
          <div
            className="navigation-section__NavigationSectionBlock-dZjlwi iLnYzu"
          >
            <div
              className="navigation-section__NavigationSectionName-kowQGE gota-dv"
              onClick={[Function]}
            >
              Structure
            </div>
            <div
              className="navigation-section__NavigationSectionComponents-iJChPb hEMjsg"
            >
              <div
                className="navigation-section__NavigationSectionComponentsItem-dXwuvS TomLe"
              >
                <a
                  className="navigation-section__NavigationSectionComponentsItemLink-ljuXWa cVdsmA"
                  data-vrt-locator="link"
                  href="#Structure-Component"
                >
                  Component
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </aside>
  <main
    className="app-view__Content-iceBke fTQZHB"
  >
    <article
      className="component__ComponentBlock-dOVVH bIwjKS"
      data-id="welcome!"
    >
      <header
        className="styleguide-component__header"
      >
        <h1
          className="component__ComponentTitle-bHenBi jcJBel"
        >
          Welcome!
        </h1>
        <div
          className="component__ComponentDescription-eZfHWI dkrxtA"
        >
          Style guide is a tool to illustrate, sandbox and test your components.
        </div>
      </header>
    </article>
  </main>
</div>
`;

exports[`App search tests When we clear search request 2`] = `
<div
  className="app-view__AppViewBlock-eavtQy cxLttm"
>
  <div
    className="sidebar-toggler__SidebarStyledToggler-cuxdwI sidebar-toggler__SidebarOpenIcon-dlLVyw gzKuvQ"
    onClick={[Function]}
  >
    <svg
      id="open"
      viewBox="0 0 20 15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 1a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM0 7.03a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM1 12.06a1 1 0 100 2h18a1 1 0 000-2H1z"
      />
    </svg>
  </div>
  <div
    className="sidebar-toggler__SidebarStyledToggler-cuxdwI sidebar-toggler__SidebarCloseIcon-dgXHTq iDhcPO"
    onClick={[Function]}
  >
    <svg
      id="close"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.23 4.81A1 1 0 004.8 6.23L10.6 12 4.8 17.77a1 1 0 101.42 1.42L12 13.4l5.78 5.78a1 1 0 001.4-1.42L13.42 12l5.78-5.77a1 1 0 10-1.41-1.42L12 10.6 6.23 4.8z"
      />
    </svg>
  </div>
  <aside
    className="sidebar__SidebarBlock-jGzEfz iVMlmQ app-view__AppSidebar-kTTMtc dzNmim"
  >
    <div
      className="sidebar__SidebarHeader-fvoXjN bqSKjH"
    >
      <div
        className="sidebar__SidebarLogo-glTcAx bFebLU"
      >
        <svg
          viewBox="0 0 44 44"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#7000E3"
            height="44"
            rx="3.9"
            width="44"
          />
          <path
            d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
            fill="#FF671B"
          />
        </svg>
      </div>
      <div
        className="sidebar__SidebarSearchField-fxnZm hEtTKV"
      >
        <div
          className="search-field__SearchFieldBlock-bGJybC gqBHCj"
        >
          <input
            autoComplete="off"
            className="search-field__SearchFieldInput-gNWiJt gEyuZP"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Search component name"
            type="text"
            value=""
          />
          <div
            className="search-field__SearchFieldIcon-AMrXU dbjKYb"
          >
            <div
              className="icon__IconBlock-bCeCJH cBUMOE"
              role="presentation"
              size={0}
            >
              <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sidebar__SidebarNavigation-bLaEkw faODsJ"
    >
      <nav
        className="navigation__NavigationBlock-cfhNmD hLoRTR"
      >
        <div
          className="navigation__NavigationSectionBlock-fZcnMm eZvwoH"
        >
          <div
            className="navigation-section__NavigationSectionBlock-dZjlwi iLnYzu"
          >
            <div
              className="navigation-section__NavigationSectionName-kowQGE gota-dv"
              onClick={[Function]}
            >
              Structure
            </div>
            <div
              className="navigation-section__NavigationSectionComponents-iJChPb hEMjsg"
            >
              <div
                className="navigation-section__NavigationSectionComponentsItem-dXwuvS TomLe"
              >
                <a
                  className="navigation-section__NavigationSectionComponentsItemLink-ljuXWa cVdsmA"
                  data-vrt-locator="link"
                  href="#Structure-Component"
                >
                  Component
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          className="navigation__NavigationSectionBlock-fZcnMm eZvwoH"
        >
          <div
            className="navigation-section__NavigationSectionBlock-dZjlwi iLnYzu"
          >
            <div
              className="navigation-section__NavigationSectionName-kowQGE gota-dv"
              onClick={[Function]}
            >
              Components
            </div>
            <div
              className="navigation-section__NavigationSectionComponents-iJChPb hEMjsg"
            >
              <div
                className="navigation-section__NavigationSectionComponentsItem-dXwuvS TomLe"
              >
                <a
                  className="navigation-section__NavigationSectionComponentsItemLink-ljuXWa cVdsmA"
                  data-vrt-locator="link"
                  href="#Components-ErrorBoundary"
                >
                  ErrorBoundary
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </aside>
  <main
    className="app-view__Content-iceBke fTQZHB"
  >
    <article
      className="component__ComponentBlock-dOVVH bIwjKS"
      data-id="welcome!"
    >
      <header
        className="styleguide-component__header"
      >
        <h1
          className="component__ComponentTitle-bHenBi jcJBel"
        >
          Welcome!
        </h1>
        <div
          className="component__ComponentDescription-eZfHWI dkrxtA"
        >
          Style guide is a tool to illustrate, sandbox and test your components.
        </div>
      </header>
    </article>
  </main>
</div>
`;

exports[`App search tests When we search, we have results filtered 1`] = `
<div
  className="app-view__AppViewBlock-eavtQy cxLttm"
>
  <div
    className="sidebar-toggler__SidebarStyledToggler-cuxdwI sidebar-toggler__SidebarOpenIcon-dlLVyw gzKuvQ"
    onClick={[Function]}
  >
    <svg
      id="open"
      viewBox="0 0 20 15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 1a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM0 7.03a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM1 12.06a1 1 0 100 2h18a1 1 0 000-2H1z"
      />
    </svg>
  </div>
  <div
    className="sidebar-toggler__SidebarStyledToggler-cuxdwI sidebar-toggler__SidebarCloseIcon-dgXHTq iDhcPO"
    onClick={[Function]}
  >
    <svg
      id="close"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.23 4.81A1 1 0 004.8 6.23L10.6 12 4.8 17.77a1 1 0 101.42 1.42L12 13.4l5.78 5.78a1 1 0 001.4-1.42L13.42 12l5.78-5.77a1 1 0 10-1.41-1.42L12 10.6 6.23 4.8z"
      />
    </svg>
  </div>
  <aside
    className="sidebar__SidebarBlock-jGzEfz iVMlmQ app-view__AppSidebar-kTTMtc dzNmim"
  >
    <div
      className="sidebar__SidebarHeader-fvoXjN bqSKjH"
    >
      <div
        className="sidebar__SidebarLogo-glTcAx bFebLU"
      >
        <svg
          viewBox="0 0 44 44"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#7000E3"
            height="44"
            rx="3.9"
            width="44"
          />
          <path
            d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
            fill="#FF671B"
          />
        </svg>
      </div>
      <div
        className="sidebar__SidebarSearchField-fxnZm hEtTKV"
      >
        <div
          className="search-field__SearchFieldBlock-bGJybC gqBHCj"
        >
          <input
            autoComplete="off"
            className="search-field__SearchFieldInput-gNWiJt gEyuZP"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Search component name"
            type="text"
            value=""
          />
          <div
            className="search-field__SearchFieldIcon-AMrXU dbjKYb"
          >
            <div
              className="icon__IconBlock-bCeCJH cBUMOE"
              role="presentation"
              size={0}
            >
              <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sidebar__SidebarNavigation-bLaEkw faODsJ"
    >
      <nav
        className="navigation__NavigationBlock-cfhNmD hLoRTR"
      >
        <div
          className="navigation__NavigationSectionBlock-fZcnMm eZvwoH"
        >
          <div
            className="navigation-section__NavigationSectionBlock-dZjlwi iLnYzu"
          >
            <div
              className="navigation-section__NavigationSectionName-kowQGE gota-dv"
              onClick={[Function]}
            >
              Structure
            </div>
            <div
              className="navigation-section__NavigationSectionComponents-iJChPb hEMjsg"
            >
              <div
                className="navigation-section__NavigationSectionComponentsItem-dXwuvS TomLe"
              >
                <a
                  className="navigation-section__NavigationSectionComponentsItemLink-ljuXWa cVdsmA"
                  data-vrt-locator="link"
                  href="#Structure-Component"
                >
                  Component
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          className="navigation__NavigationSectionBlock-fZcnMm eZvwoH"
        >
          <div
            className="navigation-section__NavigationSectionBlock-dZjlwi iLnYzu"
          >
            <div
              className="navigation-section__NavigationSectionName-kowQGE gota-dv"
              onClick={[Function]}
            >
              Components
            </div>
            <div
              className="navigation-section__NavigationSectionComponents-iJChPb hEMjsg"
            >
              <div
                className="navigation-section__NavigationSectionComponentsItem-dXwuvS TomLe"
              >
                <a
                  className="navigation-section__NavigationSectionComponentsItemLink-ljuXWa cVdsmA"
                  data-vrt-locator="link"
                  href="#Components-ErrorBoundary"
                >
                  ErrorBoundary
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </aside>
  <main
    className="app-view__Content-iceBke fTQZHB"
  >
    <article
      className="component__ComponentBlock-dOVVH bIwjKS"
      data-id="welcome!"
    >
      <header
        className="styleguide-component__header"
      >
        <h1
          className="component__ComponentTitle-bHenBi jcJBel"
        >
          Welcome!
        </h1>
        <div
          className="component__ComponentDescription-eZfHWI dkrxtA"
        >
          Style guide is a tool to illustrate, sandbox and test your components.
        </div>
      </header>
    </article>
  </main>
</div>
`;

exports[`App search tests When we search, we have results filtered 2`] = `
<div
  className="app-view__AppViewBlock-eavtQy cxLttm"
>
  <div
    className="sidebar-toggler__SidebarStyledToggler-cuxdwI sidebar-toggler__SidebarOpenIcon-dlLVyw gzKuvQ"
    onClick={[Function]}
  >
    <svg
      id="open"
      viewBox="0 0 20 15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 1a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM0 7.03a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM1 12.06a1 1 0 100 2h18a1 1 0 000-2H1z"
      />
    </svg>
  </div>
  <div
    className="sidebar-toggler__SidebarStyledToggler-cuxdwI sidebar-toggler__SidebarCloseIcon-dgXHTq iDhcPO"
    onClick={[Function]}
  >
    <svg
      id="close"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.23 4.81A1 1 0 004.8 6.23L10.6 12 4.8 17.77a1 1 0 101.42 1.42L12 13.4l5.78 5.78a1 1 0 001.4-1.42L13.42 12l5.78-5.77a1 1 0 10-1.41-1.42L12 10.6 6.23 4.8z"
      />
    </svg>
  </div>
  <aside
    className="sidebar__SidebarBlock-jGzEfz iVMlmQ app-view__AppSidebar-kTTMtc dzNmim"
  >
    <div
      className="sidebar__SidebarHeader-fvoXjN bqSKjH"
    >
      <div
        className="sidebar__SidebarLogo-glTcAx bFebLU"
      >
        <svg
          viewBox="0 0 44 44"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#7000E3"
            height="44"
            rx="3.9"
            width="44"
          />
          <path
            d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
            fill="#FF671B"
          />
        </svg>
      </div>
      <div
        className="sidebar__SidebarSearchField-fxnZm hEtTKV"
      >
        <div
          className="search-field__SearchFieldBlock-bGJybC gqBHCj"
        >
          <input
            autoComplete="off"
            className="search-field__SearchFieldInput-gNWiJt gEyuZP"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Search component name"
            type="text"
            value="comp"
          />
          <div
            className="search-field__SearchFieldIcon-AMrXU dbjKYb"
          >
            <div
              className="icon__IconBlock-bCeCJH cBUMOE"
              role="presentation"
              size={0}
            >
              <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sidebar__SidebarNavigation-bLaEkw faODsJ"
    >
      <nav
        className="navigation__NavigationBlock-cfhNmD hLoRTR"
      >
        <div
          className="navigation__NavigationSectionBlock-fZcnMm eZvwoH"
        >
          <div
            className="navigation-section__NavigationSectionBlock-dZjlwi iLnYzu"
          >
            <div
              className="navigation-section__NavigationSectionName-kowQGE gota-dv"
              onClick={[Function]}
            >
              Structure
            </div>
            <div
              className="navigation-section__NavigationSectionComponents-iJChPb hEMjsg"
            >
              <div
                className="navigation-section__NavigationSectionComponentsItem-dXwuvS TomLe"
              >
                <a
                  className="navigation-section__NavigationSectionComponentsItemLink-ljuXWa cVdsmA"
                  data-vrt-locator="link"
                  href="#Structure-Component"
                >
                  Component
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </aside>
  <main
    className="app-view__Content-iceBke fTQZHB"
  >
    <article
      className="component__ComponentBlock-dOVVH bIwjKS"
      data-id="welcome!"
    >
      <header
        className="styleguide-component__header"
      >
        <h1
          className="component__ComponentTitle-bHenBi jcJBel"
        >
          Welcome!
        </h1>
        <div
          className="component__ComponentDescription-eZfHWI dkrxtA"
        >
          Style guide is a tool to illustrate, sandbox and test your components.
        </div>
      </header>
    </article>
  </main>
</div>
`;
